--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
     "files.associations": {
-        "ostream": "cpp",
-        "*.tcc": "cpp",
-        "string": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+        "iostream": "cpp"
+    }
 }
